--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -13,5 +14,7 @@
       <span id="seconds">00</span>
       <span id="session">AM</span>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
